evidence_library/EC2/regions/eu-north-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0797dd7c23ffebaed",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-08083f7c44730f2bf",
            "SecurityGroupArn": "arn:aws:ec2:eu-north-1:111111111111:security-group/sg-0797dd7c23ffebaed",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0797dd7c23ffebaed"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "3258c3b7-4da0-41d2-a42c-4747f2a6e774",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "3258c3b7-4da0-41d2-a42c-4747f2a6e774",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "961",
            "date": "Fri, 06 Feb 2026 16:25:24 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
